--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^17.0.1",
+    "react-dev-tools": "^0.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1"
   },
@@ -33,7 +34,7 @@
   },
   "devDependencies": {
     "@learn-co-curriculum/jest-learn-reporter": "^0.1.0",
-    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "mocha": "^8.2.1"
